# LLM-prototype-app

./: README.md  app.py  mypy.ini  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: lint.yml
