[tool.poetry]
name = "llm-prototype-app"
version = "0.1.0"
description = ""
authors = ["nasuka <nasuka_s@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.191"
openai = "^0.27.7"
guidance = "^0.0.61"
streamlit = "^1.23.1"
pydantic = "^1.10.8"
mypy = "^1.3.0"
pylance = "^0.4.18"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120